Fixed: Top menus align and width;

--- a/css/TopMenus.css
+++ b/css/TopMenus.css
@@ -1,5 +1,4 @@
 #Page #RoomMenuDiv,
-#Page #ChallengeMenuDiv,
 #Page #GameRoomMenuDiv {
 	position		: absolute;
 	/*right			: 25mm;*/
@@ -7,7 +6,18 @@
 	border			: 1px solid #216778;
 	border-top		: 0px;
 	background-color: #FFF;
-	width			: 35mm;
+	width			: 28mm;
+	height			: 26mm;
+	padding			: 1mm;
+}
+#Page #ChallengeMenuDiv{
+	position		: absolute;
+	/*right			: 25mm;*/
+	top 			: 19.0mm;
+	border			: 1px solid #216778;
+	border-top		: 0px;
+	background-color: #FFF;
+	width			: 28.5mm;
 	height			: 26mm;
 	padding			: 1mm;
 }
@@ -15,10 +25,6 @@
 #Page #GameRoomMenuDiv {
 	width			: 44mm;
 }
-
-#Page #ChallengeMenuDiv {
-}
-
 
 #Page #RoomMenuDiv p,
 #Page #ChallengeMenuDiv p,
